<resources>
    <string name="app_name">QuizzApp</string>

    <!-- String resources for add question view -->
    <string name="q_text">Question: </string>
    <string name="q_answer1">Answer 1.: </string>
    <string name="q_answer2">Answer 2.: </string>
    <string name="q_answer3">Answer 3.: </string>
    <string name="q_answer4">Answer 4.: </string>
    <string name="q_level">Level: </string>
    <string name="q_correct_ans">Correct answer: </string>
    <string name="q_text_hint">Question text... </string>
    <string name="q_answer1_hint">Answer option 1... </string>
    <string name="q_answer2_hint">Answer option 2... </string>
    <string name="q_answer3_hint">Answer option 3... </string>
    <string name="q_answer4_hint">Answer option 4... </string>

    <string name="new_question_title">New Question</string>

    <string name="btn_save_question">Save new Question</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_question">Questions manager</string>
    <string name="menu_history">Historical results</string>

    <string name="start_game">Start game</string>
    <string name="quit_game">Give up!</string>
    <string name="submit_ans">Submit answer</string>
    <string name="curr_score">Score</string>
    <string name="curr_timer">Countdown timer (sec):</string>
    <string name="question_title">Questions</string>
    <string name="history_title">History</string>

    <string name="select_ans_warning">Please select a answer =p...</string>
    <string name="player_save_warning">Player name required...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="player_name">Player Name:</string>
    <string name="type_name">Your name/nickname...</string>
    <string name="submit_name">Save</string>
    <string name="cancel_name">Cancel</string>
</resources>